[gd_scene load_steps=4 format=3 uid="uid://ceewuu8rlv8t6"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_3mmd0"]
[ext_resource type="PackedScene" uid="uid://ddsrinvtabssb" path="res://Scenes/GUI.tscn" id="2_7i68v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kciki"]

[node name="Body" type="CharacterBody3D" groups=["Player"]]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_3mmd0")

[node name="Body_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("CapsuleShape3D_kciki")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="Camera" type="Camera3D" parent="Head"]

[node name="GUI" parent="Head/Camera" instance=ExtResource("2_7i68v")]

[node name="Fire_Ray" type="RayCast3D" parent="Head/Camera"]
transform = Transform3D(0.999982, 0.00596899, -2.60913e-10, 0, -4.37114e-08, -1, -0.00596899, 0.999982, -4.37106e-08, 0.269006, -0.105873, -0.777452)

[node name="Visor_Ray" type="RayCast3D" parent="Head/Camera"]
transform = Transform3D(1, 0, 0, 0, -8.74228e-07, -1, 0, 20, -4.37114e-08, 0, -0.1, -0.138226)

[node name="Damage_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Damage_Timer" to="." method="_on_timer_timeout"]
